configuring capistrano, temprorary removing passwords

--- a/config/database.yml
+++ b/config/database.yml
@@ -88,5 +88,7 @@ test:
 production:
   <<: *default
   database: fidi_production
-  username: fidi
-  password: <%= ENV['FIDI_DATABASE_PASSWORD'] %>
+  # username: <%= ENV['FIDI_DATABASE_USERNAME'] %>
+  username: username
+  password: password
+  # password: <%= ENV['FIDI_DATABASE_PASSWORD'] %>
