--- a/config/database.yml
+++ b/config/database.yml
@@ -16,7 +16,7 @@
 #
 default: &default
   adapter: postgresql
-  # encoding: unicode
+  encoding: unicode
   template: template0
   # For details on connection pooling, see rails configuration guide
   # http://guides.rubyonrails.org/configuring.html#database-pooling
@@ -88,7 +88,7 @@ test:
 #
 production:
   <<: *default
-  host: localhost
+  # host: localhost
   database: fidi_production
   username: <%= ENV['FIDI_DATABASE_USERNAME'] %>
   password: <%= ENV['FIDI_DATABASE_PASSWORD'] %>
