--- a/config/database.yml
+++ b/config/database.yml
@@ -90,5 +90,7 @@ production:
   <<: *default
   # host: localhost
   database: fidi_production
-  username: <%= ENV['FIDI_DATABASE_USERNAME'] %>
-  password: <%= ENV['FIDI_DATABASE_PASSWORD'] %>
+  username: postgres
+  password: postgres
+  # username: <%= ENV['FIDI_DATABASE_USERNAME'] %>
+  # password: <%= ENV['FIDI_DATABASE_PASSWORD'] %>
